--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "File Sharing Premium Bot",
   "description": "Telegram File Sharing Premium Bot Bot ",
-  "logo": "https://graph.org/file/2f461540c83b362772714.jpg",
+  "logo": "https://envs.sh/i_N.jpg",
   "keywords": ["File Sharing Premium Bot", "Mongo DB"],    
   "repository": "https://github.com/JishuDeveloper/File-Sharing-Bot",
   "success_url": "https://t.me/Madflix_Bots",
@@ -33,8 +33,8 @@
       },
       "FORCE_SUB_CHANNEL": {
         "description": "id of the channel or group, if you want enable force sub feature else put 0",
-        "value": "0",
-        "required": false
+        "value": "1",
+        "required": True
       },
       "DB_URL": {
           "description": "Your Mongo DB Database URL",
